force-app/main/default/objects/Job_Candidate__c/Job_Candidate__c.object-meta.xml
<CustomObject>
    <label>Job Candidate</label>
    <nameField>
        <label>Job Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>