force-app/main/default/objects/Job_Candidate__c/fields/Cell__c.field-meta.xml
<CustomField>
    <fullName>Cell__c</fullName>
    <label>Cell</label>
    <type>Phone</type>
</CustomField>