force-app/main/default/objects/Job_Candidate__c/fields/Job_Posting_Replied_To__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Replied_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Posting Replied To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Job_Posting__c.Position__c</field>
            <operation>equals</operation>
            <valueField>$Source.Position_Applied_for__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Job Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>