force-app/main/default/objects/Job_Candidate__c/fields/Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Krow Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Job Candidates</relationshipLabel>
    <relationshipName>Job_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>