force-app/main/default/objects/Job_Candidate__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>