force-app/main/default/objects/Job_Candidate__c/fields/Miles_from_Yard__c.field-meta.xml
<CustomField>
    <fullName>Miles_from_Yard__c</fullName>
    <label>Miles from Yard</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>