force-app/main/default/objects/Job_Candidate__c/fields/Min_Position_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Min_Position_Requirements__c</fullName>
    <label>Min Position Requirements</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>