force-app/main/default/objects/Job_Candidate__c/fields/Min_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Min_Requirements_Met__c</fullName>
    <label>Min Requirements Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>