force-app/main/default/objects/Job_Candidate__c/fields/Phone_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_Interview_Date__c</fullName>
    <label>Phone Interview Date</label>
    <type>Date</type>
</CustomField>