force-app/main/default/objects/Job_Candidate__c/fields/Phone_Interview_TimeHM__c.field-meta.xml
<CustomField>
    <fullName>Phone_Interview_TimeHM__c</fullName>
    <inlineHelpText>Time Entered as 1:00 PM, 11:00 AM</inlineHelpText>
    <label>Phone Interview Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>