force-app/main/default/objects/Job_Candidate__c/fields/Position_Applied_for__c.field-meta.xml
<CustomField>
    <fullName>Position_Applied_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position Applied for</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>