force-app/main/default/objects/Job_Candidate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Resume</fullName>
                <default>true</default>
                <label>Review Resume</label>
            </value>
            <value>
                <fullName>Phone Interview</fullName>
            </value>
            <value>
                <fullName>First Interview</fullName>
            </value>
            <value>
                <fullName>Second Interview</fullName>
            </value>
            <value>
                <fullName>Made Offer</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>