force-app/main/default/objects/Job_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position_Applied_for__c</columns>
    <columns>City__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>