force-app/main/default/objects/Job_Candidate__c/listViews/Open_Candidates.listView-meta.xml
<ListView>
    <fullName>Open_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Position_Applied_for__c</columns>
    <columns>City__c</columns>
    <columns>Stage__c</columns>
    <columns>Job_Posting_Replied_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Rejected,Hired</value>
    </filters>
    <label>Open Candidates</label>
</ListView>